Fix notification not visible bug, post add ready

--- a/MyCuisine/src/app/posts/add-post/add-post.component.css
+++ b/MyCuisine/src/app/posts/add-post/add-post.component.css
@@ -5,6 +5,9 @@
   padding-left: 16%;
   padding-right: 18%;
   padding-top: 43px;
+  font-family: 'Georgia', san-serif, serif;
+  font-size: 14px;
+  color: rgb(68, 41, 23);
 }
 
 .btn-submit {
@@ -22,4 +25,27 @@
   border-left-style: none;
   border-right-style: none;
   border-width: 0.8px;
+}
+
+.form-add-post .dropdown-toggle {
+  background-color: transparent;
+  border-color: #fff;
+  border-style: solid;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+}
+
+.dropdown-menu li {
+  padding: 10px;
+  text-align: center;
+}
+
+.dropdown-menu li a {
+  cursor: pointer;
+}
+
+.dropdown-menu li a:hover {
+  background-color: #769C5A;
+  color: white;
 }
